# retro

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt  retro.yaml  start.sh
landing/: index.html
retro/: __init__.py  main.py
retro/alerting/: desktop_notify.py  sound.py  webhook.py
retro/api/: schemas.py  server.py
retro/api/routes/: countermeasures.py  dashboard.py  health.py  osint.py  protection.py  reports.py  sensors.py  settings.py
retro/core/: config.py  engine.py  exceptions.py
retro/countermeasures/: abuse_report.py  base.py  dns_block.py  firewall_block.py  takedown_assist.py  threat_feed.py
retro/osint/: base.py  domain_enricher.py  email_enricher.py  hash_enricher.py  ip_enricher.py  phone_enricher.py  profile_builder.py  user_enricher.py
retro/playbooks/: domain_threat.yaml  email_phishing.yaml  hash_analysis.yaml  ip_full_investigation.yaml
retro/protection/: dns_sinkhole.py  firewall_manager.py  geo_blocker.py  ip_reputation.py  rate_limiter.py
retro/reporting/: html_report.py  pdf_report.py  timeline.py
retro/sensors/: base.py  http_honeypot.py  log_importer.py  port_scan.py  scheduler.py  ssh_honeypot.py
retro/storage/: connection.py  models.py  repository.py
retro/utils/: logger.py
ui/: index.html  package.json  vite.config.js
ui/src/: App.jsx  index.css
