[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retro"
version = "0.1.0"
description = "RETRO - Active Defense & Counterattack OSINT Platform"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["retro*"]
